# wiringpi-test

./: .gitignore  README.md  configure.ac  wiringpi-test
debian/: changelog  control  copyright  wiringpi-test.install  wiringpi-test.postrm
include/: wiringpitest.h
scripts/: functions
src/: Makefile.am  gpio.c  i2c.c  main.c  pinmap.c  show.c  spi.c
test/: Makefile
udev/rules.d/: 99-wiringpi-test-i2c.rules  99-wiringpi-test-spi.rules
